src/objects/Spaces_Shown__c.object
<CustomObject>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Spaces Shown</relationshipLabel>
        <relationshipName>Spaces_Shown</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date_Available__c</fullName>
        <formula>Space__r.Date_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Available</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Space__r.Property__r.Name</formula>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospective_Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospective Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spaces Shown</relationshipLabel>
        <relationshipName>Spaces_Shown</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Space</label>
        <referenceTo>Spaces__c</referenceTo>
        <relationshipLabel>Showings</relationshipLabel>
        <relationshipName>Spaces_Shown</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <formula>Space__r.Square_Footage__c</formula>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suite_Number__c</fullName>
        <formula>Space__r.Suite_Floor__c</formula>
        <label>Suite Number</label>
        <type>Text</type>
    </fields>
    <label>Space Shown</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Spaces Shown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spaces Shown</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>